refactor: update repository interfaces